page de support ajouter

--- a/frontend/cryptage/cryptage.html
+++ b/frontend/cryptage/cryptage.html
@@ -13,7 +13,13 @@
             <h1>Cryptage</h1>
         </div>
        
-        <a href="#" class="help">Besoin d'aide ?</a>
+        <a href="/frontend/Page_support/support.html" class="help">📞 Besoin d'aide ?</a>
+<nav class="main-navigation">
+    <!-- Vos liens existants -->
+    <a href="frontend/Page_support/support.html" class="help">
+        
+    </a>
+</nav>
     </header>
     <main>
         <div class="container">
