--- a/frontend/cryptage2/cryptage2.html
+++ b/frontend/cryptage2/cryptage2.html
@@ -13,7 +13,7 @@
         </div>
         <h2>Décryptage</h2>
    
-        <a href="#" class="help">Besoin d'aide ?</a>
+        <a href="/frontend/Page_support/support.html" class="help">📞 Besoin d'aide ?</a>
     </header>
     <main>
         <div class="container">
