--- a/frontend/page_de_connexion/page_accueil.html
+++ b/frontend/page_de_connexion/page_accueil.html
@@ -28,6 +28,7 @@
             <div class="submit-container">
                 <span class="forgot-password">Vous n'avez pas vos identifiants ?</span>
                 <button type="submit" class="submit-btn">Se connecter</button>
+                <button type="submit" class="forgot-password">Vous n'avez pas vos identifiants ?</button>
             </div>
         </form>
     </div>
