ajout du cryptage

--- a/frontend/page_de_connexion/page_accueil.html
+++ b/frontend/page_de_connexion/page_accueil.html
@@ -26,9 +26,8 @@
             </div>
 
             <div class="submit-container">
-                <span class="forgot-password">Vous n'avez pas vos identifiants ?</span>
+                <a href="/frontend/Page_support/support.html" class="forgot-password">Vous n'avez pas vos identifiants ?</a>
                 <button type="submit" class="submit-btn">Se connecter</button>
-                <button type="submit" class="forgot-password">Vous n'avez pas vos identifiants ?</button>
             </div>
         </form>
     </div>
